[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/debugger/controls/Vector2Control.gd" type="Script" id=1]
[ext_resource path="res://addons/debugger/controls/ScalarControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/debugger/controls/BaseControl.tscn" type="PackedScene" id=3]

[node name="Vector2Control" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Label" parent="." index="0"]
offset_top = 8.0
offset_right = 1.0
offset_bottom = 22.0
structured_text_bidi_override_options = [  ]

[node name="Layout" type="GridContainer" parent="." index="1"]
offset_left = 5.0
offset_right = 93.0
offset_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
columns = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScalarX" parent="Layout" index="0" instance=ExtResource( 2 )]
offset_right = 42.0
offset_bottom = 24.0

[node name="ScalarY" parent="Layout" index="1" instance=ExtResource( 2 )]
offset_left = 46.0
offset_right = 88.0
offset_bottom = 24.0
text_label = "y"

[connection signal="value_changed" from="Layout/ScalarX" to="." method="_on_ScalarX_value_changed"]
[connection signal="value_changed" from="Layout/ScalarY" to="." method="_on_ScalarY_value_changed"]
